# pm-launchpad

./: .env.example  .gitignore  ALCHEMY_SETUP.md  App.tsx  PLAN.md  README.md  SOLANA_SETUP.md  USDT_SWITCH_CHECKLIST.md  constants.ts  drizzle.config.ts  hardhat.config.cjs  index.html  metadata.json  middleware.ts  next.config.ts  package.json  tailwind.config.ts  techcontext.md  tsconfig.json  types.ts  vercel.json
anchor/: Anchor.toml  Cargo.toml  README-DEPLOYER.md
anchor/programs/prediction_market_vault/: Cargo.toml  programs_prediction_market_vault.ll
anchor/programs/prediction_market_vault/src/: lib.rs
app/: globals.css  layout.tsx  page.tsx  providers.tsx
cache/: solidity-files-cache.json
components/: AdminMarketModal.tsx  AuthModal.tsx  BetConfirmModal.tsx  BottomMenu.tsx  Button.tsx  CommunityCard.tsx  CommunityCreateModal.tsx  CommunityProfilePage.tsx  CommunityShareCard.tsx  ConnectSolanaWalletButton.tsx  DiscoverPage.tsx  FollowButton.tsx  FriendsPage.tsx  Header.tsx  HomePageClient.tsx  Leaderboard.tsx  MarketCard.tsx  MarketChart.tsx  MarketFeedItem.tsx  MarketLaunchCard.tsx  MarketPage.tsx  OnboardingModal.tsx  ProfileModal.tsx  ProfilePage.tsx  PublicUserProfileModal.tsx  Referrals.tsx  SellConfirmModal.tsx  ShareCard.tsx  SolanaProvider.tsx  SolanaWalletConnectModal.tsx  SuggestMarketModal.tsx  UserProfileModal.tsx  WalletAutoConnectFromUrl.tsx  WalletConnectProvider.tsx  WalletPage.tsx
contracts/: MockUSDC.sol  PredictionMarketVault.sol
db/: README.md
deployments/: amoy.json
hooks/: useTelegramWebApp.ts
lib/: appKit.ts  avatar.ts  avatarAccent.ts  useHaptics.ts
scripts/: kill-hardhat-node.sh  seed-bets.ts  (+1 more)
(+140 files in other folders)
